[package]
name = "mtpoe-ctrl"
version = "0.1.0"
edition = "2021"
description = "MikroTik PoE controller utility for OpenWrt"
license = "GPL-2.0"

[[bin]]
name = "mtpoe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
crc = "3"
nix = { version = "0.29", features = ["ioctl"] }
libc = "0.2"
